	PR c++/6634 	decl.c (grokdeclarator): Do not accept long long double. 	Reorganize checks for invalid (combinations of) type modifiers. 	Quote modifiers in messages.

g++.dg/parse/long1.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@112084 138bc75d-0d04-0410-961f-82ee72b054a4